--- a/src/common/Topbar.css
+++ b/src/common/Topbar.css
@@ -1,4 +1,5 @@
 /*Topbar.css*/
+/*font import*/
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nanum+Pen+Script&family=Yeon+Sung&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Faster+One&family=Nanum+Pen+Script&family=Yeon+Sung&display=swap');
 
