--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -3,7 +3,7 @@
     position: absolute;
     width: 691px;
     height: 60px;
-    right: 250px;
+    left: 50%;
     top: 150px;
     font-family: 'Poppins';
     font-style: normal;
@@ -12,6 +12,7 @@
     line-height: 150%;
     text-align: center;
     color: #000000;
+    transform: translateX(-50%);
 }
 
 .selectmehobby{
@@ -116,6 +117,4 @@
     border:none;
     left: 50%;
     transform: translateX(-50%);
-
-
 }
