--- a/src/components/ResultDetail.css
+++ b/src/components/ResultDetail.css
@@ -1,1 +1,41 @@
 /*ResultDetail.css*/
+
+#resultdetailnickname {
+    position: absolute;
+    width: 1000px;
+    height: 60px;
+    left: 50%;
+    top: 150px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 150%;
+    text-align: center;
+    color: #000000;
+    transform: translateX(-50%);
+}
+
+.detailselectbrainhobby{
+    position: absolute;
+    width: 244px;
+    height: 60px;
+    left: 242px;
+    top: 348px;
+
+    font-family: 'ABeeZee';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 150%;
+    text-align: center;
+    color: #000000;
+}
+
+#detailselectbrain {
+    font-size: 40px;
+}
+
+
+
+
