--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -1,5 +1,5 @@
 /*Hobby.css */
-.goodhobby {
+.goodhobby h2 {
     position: absolute;
     width: 717px;
     height: 72px;
@@ -17,29 +17,49 @@
     position: absolute;
     width: 1300px;
     left: 73px;
-    top: 220px;
+    top: 280px;
 }
 
-.badhobby {
+.selectgoodhobby {
+    position:absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    top:400px;
+    left: 73px;
+  }
+
+.badhobby h2 {
     position: absolute;
     width: 717px;
     height: 72px;
     left: 73px;
-    top: 490px;
+    top: 470px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
     line-height: 14px;
-    color: #CE4A7E;
+    color: #ce4a7fc6;
 }
 
 .badhobbylist {
     position: absolute;
     width: 1300px;
     left: 73px;
-    top: 530px;
+    top: 570px;
 }
+
+.selectbadhobby {
+    position:absolute;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    top:690px;
+    left: 73px;
+  }
 
 .buttonnext {
     position: absolute;
@@ -61,3 +81,30 @@
     align-items: center;
     justify-content: center;
 }
+
+
+.hobby-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    text-align: center;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 14px;
+  }
+  
+  .hobby-item {
+    padding:15px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color:#AAAAAA ;
+  }
+  
+  .selected {
+    background-color:#CE4A7E ;
+  }
+  
+
