--- a/src/components/ResultDetail.css
+++ b/src/components/ResultDetail.css
@@ -17,7 +17,7 @@
 
 #resultdetailnickname {
     position: absolute;
-    width: 1000px;
+    width: 100%;
     height: 60px;
     left: 50%;
     top: 150px;
