--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -3,7 +3,7 @@
     position: absolute;
     width: 717px;
     height: 72px;
-    left: 73px;
+    left: 3%;
     top: 180px;
     font-family: 'Poppins';
     font-style: normal;
@@ -15,8 +15,8 @@
 
 .goodhobbylist {
     position: absolute;
-    width: 1300px;
-    left: 73px;
+    width: 90%;
+    left: 5%;
     top: 280px;
 }
 
@@ -27,14 +27,14 @@
     font-weight: 600;
     font-size: 20px;
     top:400px;
-    left: 73px;
+    left: 3%;
   }
 
 .badhobby h2 {
     position: absolute;
     width: 717px;
     height: 72px;
-    left: 73px;
+    left: 3%;
     top: 470px;
     font-family: 'Poppins';
     font-style: normal;
@@ -46,8 +46,8 @@
 
 .badhobbylist {
     position: absolute;
-    width: 1300px;
-    left: 73px;
+    width: 90%;
+    left: 5%;
     top: 570px;
 }
 
@@ -58,14 +58,14 @@
     font-weight: 600;
     font-size: 20px;
     top:690px;
-    left: 73px;
+    left: 3%;
   }
 
 .buttonnext {
     position: absolute;
     width: 105px;
     height: 41px;
-    right: 50px;
+    right: 3%;
     top: 730px;
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
     background: rgba(206, 74, 126, 0.5);
